@@ -27,13 +27,12 @@ package org.bitrepository.protocol.bus;
 import org.bitrepository.bitrepositorymessages.AlarmMessage;
 import org.bitrepository.protocol.IntegrationTest;
 import org.bitrepository.protocol.message.ExampleMessageFactory;
-import org.bitrepository.protocol.messagebus.MessageBusManager;
-
+import org.jaccept.TestEventManager;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Class for testing the interface with the message bus.
@@ -44,14 +43,14 @@ public class GeneralMessageBusTest extends IntegrationTest {
     @Override
     protected void registerMessageReceivers() {
         super.registerMessageReceivers();
-        collectionReceiver = new MessageReceiver(settingsForCUT.getCollectionDestination());
+        collectionReceiver = new MessageReceiver(settingsForCUT.getCollectionDestination(), testEventManager);
         addReceiver(collectionReceiver);
     }
 
     @AfterEach
     public void tearDown() {
-        messageBus.setComponentFilter(Arrays.asList(new String[]{}));
-        messageBus.setCollectionFilter(Arrays.asList(new String[]{}));
+        messageBus.setComponentFilter(List.of());
+        messageBus.setCollectionFilter(List.of());
     }
 
     @Test
@@ -76,12 +75,13 @@ public class GeneralMessageBusTest extends IntegrationTest {
     @Tag("regressiontest")
     public final void twoListenersForTopicTest() throws Exception {
         addDescription("Verifies that two listeners on the same topic both receive the message");
+        TestEventManager testEventManager = TestEventManager.getInstance();
 
         addStep("Make a connection to the message bus and add two listeners", "No exceptions should be thrown");
-        MessageReceiver receiver1 = new MessageReceiver(alarmDestinationID);
+        MessageReceiver receiver1 = new MessageReceiver(alarmDestinationID, testEventManager);
         addReceiver(receiver1);
         messageBus.addListener(receiver1.getDestination(), receiver1.getMessageListener());
-        MessageReceiver receiver2 = new MessageReceiver(alarmDestinationID);
+        MessageReceiver receiver2 = new MessageReceiver(alarmDestinationID, testEventManager);
         addReceiver(receiver2);
         messageBus.addListener(receiver2.getDestination(), receiver2.getMessageListener());
 
